--- a/ReportExample/index.html
+++ b/ReportExample/index.html
@@ -71,7 +71,7 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="item active">
-					<img class="img-responsive" src="C:\Users\MIS553\Desktop\四小\蜂蜜.jpg" alt="slider" width="50%">						
+					<img class="img-responsive" src="四小\蜂蜜.jpg" alt="slider" width="50%">						
 					<div class="carousel-caption">
 						<h2>蜂蜜永遠不會壞</h2>
 						<h4>簡述</h4>
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="img-responsive" src="C:\Users\MIS553\Desktop\四小\fish.jpg" alt="slider"> 	
+					<img class="img-responsive" src="四小\fish.jpg" alt="slider"> 	
 					<div class="carousel-caption">
 						<h2>介紹五樣奇怪的食物</h2>
 						<h4>簡述</h4>
@@ -87,7 +87,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="img-responsive" src="C:\Users\MIS553\Desktop\四小\酒.jpg" alt="slider">	
+					<img class="img-responsive" src="四小\酒.jpg" alt="slider">	
 					<div class="carousel-caption">
 						<h2>為何酒越陳越香</h2>
 						<h4>簡述</h4>
