--- a/ReportExample/index.html
+++ b/ReportExample/index.html
@@ -49,9 +49,9 @@
 		            <div class="collapse navbar-collapse">
 		                <ul class="nav navbar-nav navbar-right">                 
 		                    <li class="scroll active"><a href="#home">大廳</a></li>
-		                    <li class="scroll"><a href="蜂蜜.html">小題目1</a></li>                         
-		                    <li class="scroll"><a href="奇怪.html">小題目2</a></li>
-		                    <li class="scroll"><a href="perfection.html">小題目3</a></li>                     		         		                    
+		                    <li class="scroll"><a href="ReportExample/蜂蜜.html">小題目1</a></li>                         
+		                    <li class="scroll"><a href="ReportExample/奇怪.html">小題目2</a></li>
+		                    <li class="scroll"><a href="ReportExample/perfection.html">小題目3</a></li>                     		         		                    
 		                </ul>
 		            </div>
 		        </div>
@@ -75,7 +75,7 @@
 					<div class="carousel-caption">
 						<h2>蜂蜜永遠不會壞</h2>
 						<h4>簡述</h4>
-						<a href="蜂蜜.html">了解更多 <i class="fa fa-angle-right"></i></a>
+						<a href="ReportExample/蜂蜜.html">了解更多 <i class="fa fa-angle-right"></i></a>
 					</div>
 				</div>
 				<div class="item">
@@ -83,7 +83,7 @@
 					<div class="carousel-caption">
 						<h2>介紹五樣奇怪的食物</h2>
 						<h4>簡述</h4>
-						<a href="四小/奇怪.html">了解更多 <i class="fa fa-angle-right"></i></a>
+						<a href="ReportExample/四小/奇怪.html">了解更多 <i class="fa fa-angle-right"></i></a>
 					</div>
 				</div>
 				<div class="item">
@@ -91,7 +91,7 @@
 					<div class="carousel-caption">
 						<h2>為何酒越陳越香</h2>
 						<h4>簡述</h4>
-						<a href="perfection.html">了解更多 <i class="fa fa-angle-right"></i></a>
+						<a href="ReportExample/perfection.html">了解更多 <i class="fa fa-angle-right"></i></a>
 					</div>
 				</div>				
 				</div>								
