--- a/ReportExample/四小/蜂蜜.html
+++ b/ReportExample/四小/蜂蜜.html
@@ -54,7 +54,7 @@
 	</div>		
 		<hr>
 		<center>
-		<p>本產品不含防腐劑，請<del><small>asasas</small></del>置於室溫下保存即可</p>
+		<p>本產品不含防腐劑，請置於室溫下保存即可</p>
 		<p>請勿將本產品至於微波爐中或瓦斯爐上直接加熱</p>
 		<p>也請勿直接冷凍，會結冰(。皿。)</p>
 		</center>
